--- a/frontend/src/components/CARDS/cardroupas-branco/style.css
+++ b/frontend/src/components/CARDS/cardroupas-branco/style.css
@@ -3,6 +3,11 @@
     flex-direction: column;
     align-items: center;
     gap: 20px;
+    transition: transform 0.2s
+}
+
+.cardroupa:hoover {
+    transition: transform 0.3s ease-in-out;
 }
 
 .roupa-content img {
@@ -40,6 +45,6 @@
     font-family: var(--font-prize);
     font-size: var(--font-discount-size);
     text-decoration: line-through;
-    color: var(--color-secondary-dark-gray);
+    color: var(--color-secondary-gray);
 
 }
