--- a/frontend/src/components/CARDS/cardroupas/style.css
+++ b/frontend/src/components/CARDS/cardroupas/style.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 20px;
+    gap: 300px;
 }
 
 .roupa-content img {
@@ -12,34 +12,36 @@
 
 .roupa-content {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     width: 300px;
-    padding: 5px 10px;
+    padding: 5px, 10px;
 }
 
 .nome-roupa{
+    display: flex;
+    justify-content: end;
     font-family: var(--font-body);
     font-size: var(--font-body-size);
     font-weight: var(--font-body-weight);
 }
 
-.prizes{
+.prizes-preto{
     display: flex;
     flex-direction: row;
-    gap: 15px;
+    gap: 30px;
 
 }
 
-.prize-roupa{
+.prize-roupa-preto{
     font-family: var(--font-prize);
     font-size: var(--font-prize-size);
     font-weight: var(--font-prize-weight);
 }
 
-.discount-roupa {
+.discount-roupa-preto {
     font-family: var(--font-prize);
     font-size: var(--font-discount-size);
     text-decoration: line-through;
-    color: var(--color-secondary-dark-gray);
+    color: var(--color-secondary-black);
 
 }
