--- a/frontend/src/pages/PageLançamentos/style.css
+++ b/frontend/src/pages/PageLançamentos/style.css
@@ -8,6 +8,7 @@
     color: var(--color-primary-white);
     text-decoration: none;
     font-family: var(--font-body);
+    font-size: var(--font-h4-size);
 
 }
 
@@ -17,5 +18,6 @@
 
 .container-section-lancamentos {
     display: flex;
-    justify-content: space-around;
+    justify-content: center;
+    gap: 50px;
 }
