--- a/frontend/src/components/CARDS/cardroupas/style.css
+++ b/frontend/src/components/CARDS/cardroupas/style.css
@@ -2,6 +2,13 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    transition: 0.3s;
+    cursor: pointer;
+}
+
+.cardroupa:hover{
+    transform: scale(1.07);
+    box-shadow: 0px 0px 60px 10px #00000034;
 }
 
 .roupa-content img {
