--- a/frontend/src/components/layout/section-lancamentos/style.css
+++ b/frontend/src/components/layout/section-lancamentos/style.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 60px 0px;
+    padding: 60px;
     gap: 35px;
     color: var(--color-primary-black);
     background-color: var(--color-primary-white);
