--- a/frontend/src/pages/PageLançamentos/style.css
+++ b/frontend/src/pages/PageLançamentos/style.css
@@ -8,8 +8,6 @@
     color: var(--color-primary-white);
     text-decoration: none;
     font-family: var(--font-body);
-    font-size: var(--font-h4-size);
-
 }
 
 .h2-lancamentos {
@@ -20,4 +18,5 @@
     display: flex;
     justify-content: center;
     gap: 50px;
+    padding: 0px 0px 40px 0px;
 }
