--- a/frontend/src/components/layout/section-ofertas/style.css
+++ b/frontend/src/components/layout/section-ofertas/style.css
@@ -15,7 +15,7 @@
     padding: 50px;
 }
 
-h2 {
+.section-ofertas h2 {
     font-family: var(--font-title);
     font-size: var(--font-h2-size);
     font-weight: var(--font-title-weight);
