canvas do carrinho em processo de finalizacao

--- a/frontend/src/components/layout/header/style.css
+++ b/frontend/src/components/layout/header/style.css
@@ -43,3 +43,8 @@
 .btn-profile {
   background-color: hsla(0, 0%, 100%, 0);
 }
+
+.btn-kart{
+  cursor: pointer;
+  background-color: var(--color-primary-white);
+}
