--- a/frontend/src/pages/PageCadastro/style.css
+++ b/frontend/src/pages/PageCadastro/style.css
@@ -5,10 +5,13 @@
 
 }
 
-.titulo-h2 {
+.cadastro-container h2{
+    padding: 40px 0 0;
+    text-decoration: underline 2px;
+    text-underline-offset: 10px;
     font-family: var(--font-title);
-    padding-top: 40px;
-
+    font-size: var(--font-h2-size);
+    font-weight: var(--font-title-weight);
 }
 
 
@@ -18,20 +21,31 @@
 
 
 
-h3 {
-    font-family: var(--font-title);
-    font-weight: 400;
-    font-size: 28px;
-
+.copyright-cadastro {
+    font-family: var(--font-body);
+    font-weight: var(--font-body-weight);
 }
 
 .form-cadastro {
     display: flex;
     flex-direction: row;
+    align-items: start;
     justify-content: center;
     gap: 200px;
     margin-top: 40px;
     padding: 40px;
+}
+
+.coluna-info-contatos {
+    display: flex;
+    justify-content: end;
+    width: 580px;
+}
+
+.form-cadastro h3 {
+    font-family: var(--font-body);
+    font-size: var(--font-h3-size);
+    font-weight: var(--font-title-weight);
 }
 
 
@@ -101,21 +115,17 @@ label {
     height: 40px;
 }
 
-
-
-.btn-class {
-    padding: 40px 0px;
-
-}
-
-.btn-cadastrar {
-    color: #fff;
-    background-color: #252422;
+.coluna-endereco button {
     border-radius: 10px;
     font-family: var(--font-title);
     font-size: 28px;
     width: 580px;
     height: 50px;
     cursor: pointer;
+    margin-top: 40px;
+}
+
+.btn-class {
+    padding: 40px 0px;
 
 }
