--- a/frontend/src/components/CARDS/cardroupas-branco/style.css
+++ b/frontend/src/components/CARDS/cardroupas-branco/style.css
@@ -2,6 +2,12 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    transition: 0.3s;
+    cursor: pointer;
+}
+
+.cardroupa-branco:hover {
+    transform: scale(1.05);
 }
 
 .roupa-content-branco img {
@@ -29,7 +35,7 @@
 
 }
 
-.prize-roupa-branco{
+.prize-roupa-branco {
     font-family: var(--font-prize);
     font-size: var(--font-prize-size);
     font-weight: var(--font-prize-weight);
