--- a/frontend/src/components/MODALS/offcanvas/style.css
+++ b/frontend/src/components/MODALS/offcanvas/style.css
@@ -1,5 +1,10 @@
-.modal-do-lado {
-    padding: 0px !important;
+.container-canvas {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
+    padding: 0px;
 }
 
 .offcanvas {
@@ -26,8 +31,77 @@
     cursor: pointer;
 }
 
-.footer-canvas {
+
+.container-conteudo-sacola {
+    display: flex;
+    flex-direction: row;
 }
 
-.subtotal-valor {
+.container-conteudo-sacola img {
+    width: 150px;
+    height: 150px;
+}
+
+.info-produtos {
+    display: flex;
+    position: relative;
+    flex-direction: column;
+    gap: 20px;
+    font-family: var(--font-body);
+}
+
+.info-cor-e-tamanho {
+    display: flex;
+    flex-direction: row;
+    gap: 10px;
+
+}
+.cor {
+    padding: 5px 9px;
+    border: 1px solid #000;
+    border-radius: 10px;
+}
+
+.tamanho{
+    padding: 5px 9px;
+    border: 1px solid #000;
+    border-radius: 10px
+}
+
+.prize{
+    font-family: var(font-prize);
+}
+
+.qtd-e-lixeira{
+    display: flex;
+    flex-direction: row;
+    padding: 1px 8px;
+    border: 1px solid #000;
+    border-radius: 10px;
+    gap: 10px;
+    background-color: #fff;
+}
+
+.qtd-e-lixeira button{
+    background-color: #fff;
+    cursor: pointer;
+}
+
+.footer-canvas{
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 200px;
+    background-color: #f5f5f5;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    gap: 10px;
+    padding: 0px 20px;}
+
+.valor-total{
+    display: flex;
+    justify-content: space-between;
+    gap: 120px;
 }
