--- a/frontend/src/components/MODALS/offcanvasCarrinho/style.css
+++ b/frontend/src/components/MODALS/offcanvasCarrinho/style.css
@@ -4,18 +4,22 @@
     display: flex;
     flex-direction: column;
     gap: 30px;
-    padding: 0px;
+    padding: 0px !important;
+    background-color: var(--color-secondary-gray) !important; 
 }
 
-.offcanvas {
-    background-color: #fff
-}
 
 .header-canvas {
     display: flex;
     align-items: center;
     justify-content: space-between;
     width: 100%;
+    padding: 20px;
+    gap: 10px;
+    font-family: var(--font-title);
+    font-size: var(--font-h3-size);
+    border-bottom: 1px solid #000;
+    background-color: #fff;
 }
 
 .carrinho-com-bola {
@@ -29,7 +33,6 @@
     justify-content: end;
     padding: 15px;
     cursor: pointer;
-<<<<<<< HEAD:frontend/src/components/MODALS/offcanvas/style.css
 }
 
 
@@ -93,19 +96,24 @@
     bottom: 0;
     width: 100%;
     height: 200px;
-    background-color: #f5f5f5;
+    background-color: #fff;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: center;
     gap: 10px;
-    padding: 0px 20px;}
+    padding: 0px 20px;
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+}
 
 .valor-total{
     display: flex;
     justify-content: space-between;
     gap: 120px;
+    font-family: var(--font-prize);
+    font-size: var(--font-h4-size);
 }
-=======
+
+.h2-valor-total{
+    text-decoration: underline;
 }
->>>>>>> 5c5e3f32beaec96c6da4b3734f0cf950a46102d9:frontend/src/components/MODALS/offcanvasCarrinho/style.css
