--- a/frontend/src/pages/PageLançamentos/style.css
+++ b/frontend/src/pages/PageLançamentos/style.css
@@ -11,6 +11,11 @@
 }
 
 .h2-lancamentos {
+    display: flex;
+    justify-content: center;
+    font-family: var(--font-title);
+    font-size: var(--font-h2-size);
+    font-weight: var(--font-title-weight);
     padding: 30px;
 }
 
