--- a/frontend/src/pages/PageInverno/style.css
+++ b/frontend/src/pages/PageInverno/style.css
@@ -1,9 +1,15 @@
-.container-section-inverno{
-    display: flex;
-    justify-content: center;
+.container-section-inverno {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
     gap: 50px;
+    padding: 0px 10px 40px 10px;
 }
 
 .h2-inverno {
+    display: flex;
+    justify-content: center;
+    font-family: var(--font-title);
+    font-size: var(--font-h2-size);
+    font-weight: var(--font-title-weight);
     padding: 30px;
 }
