--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -65,3 +65,36 @@
   transform: scale(1.05);
   cursor: pointer;
 }
+
+/*-----------------------STYLE DAS PÁGINAS DE ROUPAS-----------------------*/
+
+
+.linha-de-sessoes {
+    display: flex;
+    justify-content: space-evenly;
+    background-color: var(--color-secondary-dark-gray);
+}
+
+.linha-de-sessoes a {
+    color: var(--color-primary-white);
+    text-decoration: none;
+    width: 132px;
+    text-align: center;
+    font-family: var(--font-body);
+}
+
+.page-menu h2 {
+    display: flex;
+    justify-content: center;
+    font-family: var(--font-title);
+    font-size: var(--font-h2-size);
+    font-weight: var(--font-title-weight);
+    padding: 30px;
+}
+
+.container-page-menu {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 50px;
+    padding: 0px 0px 40px 0px;
+}
