--- a/frontend/src/components/carrossel/style.css
+++ b/frontend/src/components/carrossel/style.css
@@ -1,7 +1,8 @@
 .embla {
   overflow: hidden;
   margin: auto;
-  --slide-spacing: 1rem;
+  background: #ffffff;
+  background: linear-gradient(0deg, rgba(255, 255, 255, 1) 0%, rgba(0, 0, 0, 1) 11%, rgba(0, 0, 0, 1) 100%);
 }
 
 .embla__container {
@@ -13,7 +14,7 @@
   min-width: 0;
 }
 
-.embla_image{
+.embla_image {
   width: 100%;
   height: auto;
 }
