--- a/frontend/src/pages/PageComprar/style.css
+++ b/frontend/src/pages/PageComprar/style.css
@@ -1,17 +1,3 @@
-.div-navegacao nav {
-    display: flex;
-    justify-content: center;
-    gap: 100px;
-    margin-bottom: 22px;
-    background-color: #fff;
-    font-family: var(--font-body);
-    font-size: var(--font-body-size);
-}
-
-.div-navegacao nav p {
-    width: 91px;
-    text-align: center;
-}
 
 .section-comprar-container {
     display: flex;
@@ -93,8 +79,7 @@
 .box-precos {
     display: flex;
     flex-direction: column;
-    align-items: flex-end;
-    margin-right: 150px;
+    align-items: center;
 }
 
 .linha-preco {
