--- a/frontend/src/pages/PageCadastro/style.css
+++ b/frontend/src/pages/PageCadastro/style.css
@@ -5,7 +5,7 @@
 
 }
 
-.cadastro-container h2{
+.cadastro-container h2 {
     padding: 40px 0 0;
     text-decoration: underline 2px;
     text-underline-offset: 10px;
@@ -128,4 +128,40 @@ label {
 .btn-class {
     padding: 40px 0px;
 
+}
+
+@media (max-width: 480px) {
+    .form-cadastro {
+        flex-direction: column;
+        align-items: center;
+        gap: 20px;
+        padding: 20px;
+    }
+
+    .cadastro-container h2 {
+        padding: 20px 0 0;
+    }
+
+
+    .coluna-info-contatos,
+    .coluna-endereco {
+        width: 100%;
+    }
+
+    .nome-email input,
+    .coluna-endereco input {
+        width: 100%;
+    }
+
+    .senhas input,
+    .contatos input,
+    .cep input,
+    .numero input,
+    .complemento input {
+        width: 100%;
+    }
+
+    .coluna-endereco button {
+        width: 100%;
+    }
 }
