--- a/frontend/src/pages/PageInverno/style.css
+++ b/frontend/src/pages/PageInverno/style.css
@@ -2,8 +2,22 @@
     display: flex;
     justify-content: center;
     gap: 50px;
+    padding: 20px;
 }
 
 .h2-inverno {
+    display: flex;
+    justify-content: center;
+    font-family: var(--font-title);
+    font-size: var(--font-h2-size);
+    font-weight: var(--font-title-weight);
     padding: 30px;
+}
+
+
+@media (max-width: 480px) {
+    .container-section-inverno{
+        flex-direction: column;
+        align-items: center;
+    }
 }
