--- a/frontend/src/pages/PageLançamentos/style.css
+++ b/frontend/src/pages/PageLançamentos/style.css
@@ -25,3 +25,11 @@
     gap: 50px;
     padding: 0px 0px 40px 0px;
 }
+
+@media (max-width: 480px) {
+
+    .container-section-lancamentos {
+        flex-direction: column;
+        align-items: center;
+    }
+}
