--- a/frontend/src/pages/PageLogin/style.css
+++ b/frontend/src/pages/PageLogin/style.css
@@ -112,3 +112,25 @@
     display: flex;
     flex-direction: column;
 }
+
+@media (max-width: 480px) {
+    .card-login {
+        width: 100%;
+        flex-direction: column;
+        align-items: center;
+        padding: 20px;
+        gap: 20px;
+    }
+
+    .botao-de-voltar{
+display: none;
+    }
+
+    .section-login{
+        height: auto;
+    }
+
+    .login-form input {
+        width: 50vh;
+    }
+}
